--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,10 @@
+**** N B *****
+
+Gemfile is different vs. Hartl's
+
+*******
+
+
 == README
 
 This README would normally document whatever steps are necessary to get the
